--- a/GraphRAG_Social_Media_Neo4j.ipynb
+++ b/GraphRAG_Social_Media_Neo4j.ipynb
@@ -23,7 +23,11 @@
         "\n",
         "> 💰 **Note:** This notebook is optimized for **paid Gemini API** with rate-limiting delays (20s between operations). Question counts are balanced for tutorial purposes (2 per step) to manage API costs while demonstrating all key features.\n",
         "\n",
-        "In the previous notebook (`Social_Media_ETL_Neo4j_Python.ipynb`) we built a social media knowledge graph in Neo4j with **Users, Tweets, Hashtags, and Places**. Now we will layer **AI** on top of that graph to create a **GraphRAG** pipeline.\n",
+        "In the previous notebook, [**Social_Media_ETL_Neo4j_Python.ipynb**](https://github.com/lbsocial/data-analysis-with-generative-ai/blob/main/Social_Media_ETL_Neo4j_Python.ipynb), we built a social media knowledge graph in Neo4j with **Users, Tweets, Hashtags, and Places**.\n",
+        "\n",
+        "![GraphRAG Pipeline](https://github.com/lbsocial/data-analysis-with-generative-ai/blob/1660b372f63accb8e55ea4b439924ba764639182/image/Gemini_Generated_Image_vslfdxvslfdxvslf.png?raw=true)\n",
+        "\n",
+        "Now we will layer **AI** on top of that graph to create a **GraphRAG** pipeline.\n",
         "\n",
         "**What is GraphRAG?**\n",
         "\n",
@@ -32,7 +36,7 @@
         "2. **Graph Traversal** — follow relationships (who posted it, where, which hashtags) to enrich context.\n",
         "3. **LLM Generation** — pass the enriched context to a language model for a grounded answer.\n",
         "\n",
-        "![GraphRAG Pipeline](https://github.com/lbsocial/data-analysis-with-generative-ai/blob/1660b372f63accb8e55ea4b439924ba764639182/image/Gemini_Generated_Image_vslfdxvslfdxvslf.png?raw=true)\n",
+        "\n",
         "\n",
         "**What we will build:**\n",
         "| Step | Action |\n",
