Update GraphRAG_Social_Media_Neo4j notebook for Gemini API changes and tutorial clarity
- Changed note regarding API usage from paid to free tier for Gemini 2.5 Flash.
- Updated LLM model version from "gemini-2.0-flash" to "gemini-2.5-flash".
- Revised tutorial notes to emphasize the free tier capabilities and clarity in API call explanations.

--- a/GraphRAG_Social_Media_Neo4j.ipynb
+++ b/GraphRAG_Social_Media_Neo4j.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/lbsocial/data-analysis-with-generative-ai/blob/main/GraphRAG_Social_Media_Neo4j.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -21,7 +21,7 @@
         "\n",
         "**Ask natural-language questions — get graph-powered answers.**\n",
         "\n",
-        "> 💰 **Note:** This notebook is optimized for **paid Gemini API** with rate-limiting delays (20s between operations). Question counts are balanced for tutorial purposes (2 per step) to manage API costs while demonstrating all key features.\n",
+        "> 💡 **Note:** This notebook uses **Gemini 2.5 Flash**, which is available on the **free tier** of the Gemini API — no billing required to complete this tutorial. Question counts are kept concise (2 per step) for tutorial clarity.\n",
         "\n",
         "In the previous notebook, [**Social_Media_ETL_Neo4j_Python.ipynb**](https://github.com/lbsocial/data-analysis-with-generative-ai/blob/main/Social_Media_ETL_Neo4j_Python.ipynb), we built a social media knowledge graph in Neo4j with **Users, Tweets, Hashtags, and Places**.\n",
         "\n",
@@ -634,7 +634,7 @@
       },
       "outputs": [],
       "source": [
-        "LLM_MODEL = \"gemini-2.0-flash\"\n",
+        "LLM_MODEL = \"gemini-2.5-flash\"\n",
         "\n",
         "SYSTEM_PROMPT = \"\"\"You are a social media analyst assistant.\n",
         "Answer the user's question based ONLY on the retrieved context below.\n",
@@ -726,7 +726,7 @@
         "\n",
         "**Expected difference:** GraphRAG answers should be more detailed and cite specific users, locations, and engagement metrics because it leverages graph relationships, not just text similarity.\n",
         "\n",
-        "**Tutorial Note:** We run 2 comparison questions. Each makes 2 API calls (one for traditional RAG, one for GraphRAG)."
+        "**Tutorial Note:** We run 2 comparison questions. Each makes 2 API calls (one for traditional RAG, one for GraphRAG). The free tier of Gemini API is sufficient for this."
       ]
     },
     {
@@ -825,7 +825,7 @@
         "- No need to manually write Cypher for every question\n",
         "- LLM ensures query matches the actual schema\n",
         "\n",
-        "**Tutorial Note:** We demonstrate 2 analytical questions. In production, you can add validation to check generated queries before execution."
+        "**Tutorial Note:** We demonstrate 2 analytical questions. The free Gemini API tier handles these comfortably. In production, you can add validation to check generated queries before execution."
       ]
     },
     {
@@ -1069,7 +1069,7 @@
         "3. **Graph traversal**: Enrich with author, hashtags, and related content\n",
         "4. **LLM generation**: Synthesize findings into a natural language answer\n",
         "\n",
-        "**Tutorial Note:** We demonstrate 2 geo-scoped questions across different cities to show regional differences in discussions."
+        "**Tutorial Note:** We demonstrate 2 geo-scoped questions across different cities to show regional differences in discussions. All API calls in this notebook work within the free Gemini tier."
       ]
     },
     {
@@ -1254,8 +1254,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "include_colab_link": true,
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
