--- a/GraphRAG_Social_Media_Neo4j.ipynb
+++ b/GraphRAG_Social_Media_Neo4j.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/lbsocial/data-analysis-with-generative-ai/blob/main/GraphRAG_Social_Media_Neo4j.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -123,6 +123,24 @@
         "\n",
         "> **Note:** This notebook is designed for Google Colab. If you want to run it locally with Jupyter, you'll need to adapt the credential loading code."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "83a42af2"
+      },
+      "source": [
+        "### 📄 `.env` File Example\n",
+        "\n",
+        "If you choose **Option 2**, create a text file named `.env` with the following content (replace with your actual keys):\n",
+        "\n",
+        "```env\n",
+        "NEO4J_URI=neo4j+s://your-instance-id.databases.neo4j.io\n",
+        "NEO4J_PASSWORD=your-password-here\n",
+        "GOOGLE_API_KEY=your-google-api-key-here\n",
+        "```"
+      ],
+      "id": "83a42af2"
     },
     {
       "cell_type": "code",
@@ -1254,8 +1272,8 @@
   ],
   "metadata": {
     "colab": {
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
